add game.js; slight change to css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="container">
-        <div class="row playerlist text-center">
+        <div id="character-list" class="row text-center">
             <div class="col col-xs-6 col-sm-4 col-md-2">
                 <div class="card">
                     <div class="card-header">
