--- a/index.html
+++ b/index.html
@@ -16,92 +16,35 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <h1>Super Mario RPG! - yet another lame game</h1>
     </header>
 
     <div class="container">
         <div id="character-list" class="row text-center">
-            <div class="col col-xs-6 col-sm-4 col-md-2">
-                <div class="card">
-                    <div class="card-header">
-                        Mario
-                    </div>
-                    <div class="card-body">
-                        <img src="assets/images/mario.png">
-                    </div>
-                    <div class="card-footer text-muted">
-                        120
-                    </div>
-                </div>
+        </div>
+
+        <div id="playground" class="row text-center">
+            <!-- player 1 -->
+            <div id="player-left" class="col col-xs-5 col-sm-4 col-md-3">
+                <div class="player"></div>
             </div>
-            <div class="col col-xs-6 col-sm-4 col-md-2">
-                <div class="card">
-                    <div class="card-header">
-                        Luigi
-                    </div>
-                    <div class="card-body">
-                        <img src="assets/images/luigi.png">
-                    </div>
-                    <div class="card-footer text-muted">
-                        100
-                    </div>
-                </div>
+            <!-- gameinfo -->
+            <div id="gameinfo-msg" class="col col-xs-2 col-sm-4 col-md-6 text-center">
+                <button id="btn-p1" type="button" class="btn btn-info">pick your character</button>
+                <button id="btn-p2" type="button" class="btn btn-info" style="display: none">pick your ENEMY</button>
+                <button id="btn-fight" type="button" class="btn btn-warning" style="display: none"> ⚔ FIGHT! ⚔ </button>
+                <button id="btn-restart" type="button" class="btn btn-info" style="display: none"> RESTART </button>
+                <audio id="mb-theme1" src="assets/music/mb-theme1.mp3" type="audio/mp3"></audio>  
             </div>
-            <div class="col col-xs-6 col-sm-4 col-md-2">
-                <div class="card">
-                    <div class="card-header">
-                        Toad
-                    </div>
-                    <div class="card-body">
-                        <img src="assets/images/toad.png">
-                    </div>
-                    <div class="card-footer text-muted">
-                        150
-                    </div>
-                </div>
-            </div>
-            <div class="col col-xs-6 col-sm-4 col-md-2">
-                <div class="card">
-                    <div class="card-header">
-                        Yoshi
-                    </div>
-                    <div class="card-body">
-                        <img src="assets/images/yoshi.png">
-                    </div>
-                    <div class="card-footer text-muted">
-                        100
-                    </div>
-                </div>
-            </div>
-            <div class="col col-xs-6 col-sm-4 col-md-2">
-                <div class="card">
-                    <div class="card-header">
-                        Bowser
-                    </div>
-                    <div class="card-body">
-                        <img src="assets/images/bowser.png">
-                    </div>
-                    <div class="card-footer text-muted">
-                        200
-                    </div>
-                </div>
-            </div>
-            <div class="col col-xs-6 col-sm-4 col-md-2">
-                <div class="card">
-                    <div class="card-header">
-                        Random
-                    </div>
-                    <div class="card-body">
-                        <img src="assets/images/random.png">
-                    </div>
-                    <div class="card-footer text-muted">
-                        ?
-                    </div>
-                </div>
+            <!-- player 2 -->
+            <div id="player-right" class="col col-xs-5 col-sm-4 col-md-3">
+                <div class="player"></div>
             </div>
         </div>
-       
     </div>
+    
+    <audio id="punch-sound"><source src="assets/music/Left-Hook-SoundBible.com.mp3" type="audio/mp3"></audio>
+    <script src="assets/javascript/game.js"></script>
 
 </body>
