update style and fix some bugs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
+
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=Acme|Carter+One" rel="stylesheet">
 </head>
 
 <body>
