improve char selecting; polish layout and style

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                 <div class="player"></div>
             </div>
             <!-- gameinfo -->
-            <div id="gameinfo-msg" class="col col-xs-2 col-sm-4 col-md-6 text-center">
-                <button id="btn-p1" type="button" class="btn btn-info">pick your character</button>
-                <button id="btn-p2" type="button" class="btn btn-info" style="display: none">pick your ENEMY</button>
+            <div id="gameinfo" class="col col-xs-2 col-sm-4 col-md-6 text-center">
+                <span id="btn-p1">pick your character</span>
+                <span id="btn-p2" style="display: none">pick your ENEMY</span>
                 <button id="btn-fight" type="button" class="btn btn-warning" style="display: none"> ⚔ FIGHT! ⚔ </button>
+                <div id="gameinfo-msg"></div>
                 <button id="btn-restart" type="button" class="btn btn-info" style="display: none"> RESTART </button>
                 <audio id="mb-theme1" src="assets/music/mb-theme1.mp3" type="audio/mp3"></audio>  
             </div>
